--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "hardhat": "^2.22.19"
+    "hardhat": "^2.22.19",
+    "remix": "^2.16.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
